--- a/ms_data/prepareFIR.ipynb
+++ b/ms_data/prepareFIR.ipynb
@@ -2,21 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "str() takes at most 3 arguments (270 given)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\mschultz\\Documents\\GitHub\\bluesky\\plugins\\ms_data\\prepareFIR.ipynb Zelle 1\u001b[0m in \u001b[0;36m<cell line: 10>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/mschultz/Documents/GitHub/bluesky/plugins/ms_data/prepareFIR.ipynb#ch0000000?line=13'>14</a>\u001b[0m arr \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39marray(coords)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/mschultz/Documents/GitHub/bluesky/plugins/ms_data/prepareFIR.ipynb#ch0000000?line=14'>15</a>\u001b[0m arr\u001b[39m.\u001b[39mT[[\u001b[39m0\u001b[39m,\u001b[39m1\u001b[39m]] \u001b[39m=\u001b[39m arr\u001b[39m.\u001b[39mT[[\u001b[39m1\u001b[39m,\u001b[39m0\u001b[39m]]\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/mschultz/Documents/GitHub/bluesky/plugins/ms_data/prepareFIR.ipynb#ch0000000?line=15'>16</a>\u001b[0m \u001b[39mprint\u001b[39m(name \u001b[39m+\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m \u001b[39m\u001b[39m\"\u001b[39m \u001b[39m+\u001b[39m \u001b[39mstr\u001b[39;49m(\u001b[39m*\u001b[39;49mnp\u001b[39m.\u001b[39;49mround(arr\u001b[39m.\u001b[39;49mflatten(),\u001b[39m4\u001b[39;49m)))\n",
-      "\u001b[1;31mTypeError\u001b[0m: str() takes at most 3 arguments (270 given)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import json\n",
     "import numpy as np\n",
@@ -33,18 +21,64 @@
     "    coords = fir['geometry']['coordinates'][0]\n",
     "    arr = np.array(coords)\n",
     "    arr.T[[0,1]] = arr.T[[1,0]]\n",
-    "    c = *np.round(arr.flatten(),4)\n",
-    "    print(name + \" \" + c)\n",
+    "    c = np.round(arr.flatten(),4)\n",
+    "    print(' '.join(map(str,c)))\n",
+    "    print(name, end=' ')\n",
+    "    # print(np.array2string(c)[1 : -1])\n",
+    "    print(np.array2string(np.round(arr.flatten(),4))[1 : -1])\n",
     "\n",
     "# print(json.dumps(firs, indent=4, sort_keys=True))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 2, 3, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import rdp as RDP\n",
+    "import numpy as np\n",
+    "\n",
+    "pos = np.array([\n",
+    "    [1,1], \n",
+    "\t[2,2],\n",
+    "\t[3,3],\n",
+    "\t[7,27],\n",
+    "\t[10,10]\n",
+    "\t])\n",
+    "\n",
+    "anchors = [0, len(pos)-1]\n",
+    "\n",
+    "RDP.simplify(pos, .1, anchors)\n",
+    "\n",
+    "print(anchors)"
    ]
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "Python 3.10.5 64-bit",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "name": "python",
+   "version": "3.10.5"
+  },
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "059fd84560a28733cba7f4633663721c982c5866ac12a8c16ee71935bec3c3e3"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
