--- a/msdata/prepareFIR.ipynb
+++ b/msdata/prepareFIR.ipynb
@@ -61,6 +61,68 @@
     "\n",
     "print(anchors)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['id', 'time', 'altitude', 'longitude', 'latitude']\n",
+      "           id   time  altitude  longitude  latitude\n",
+      "0      SIA37A -57081         0 -118.40778  33.94250\n",
+      "2206   SIA37A -54875     40000 -123.16971  36.03983\n",
+      "50985  SIA37A  -6096     39982  115.88247   8.96816\n",
+      "56754  SIA37A   -327     29798  105.57052   1.19662\n",
+      "57698  SIA37A    617      3736  104.00919   1.13169\n",
+      "57973  SIA37A    892         4  103.98917   1.35878\n",
+      "57974\n"
+     ]
+    }
+   ],
+   "source": [
+    "import rdp as RDP\n",
+    "import lzma\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from io import StringIO\n",
+    "\n",
+    "n = 0\n",
+    "header = \"\"\n",
+    "oldId = \"\"\n",
+    "csv = \"\"\n",
+    "\n",
+    "# id,time,altitude,longitude,latitude\n",
+    "with lzma.open('c:\\\\Users\\\\mschultz\\\\Downloads\\\\t_future_flas_360_ats_01.csv.xz', mode='rt', encoding='utf-8') as file:\n",
+    "    for line in file:\n",
+    "        id = line.split(sep=\",\")[0]\n",
+    "        if oldId != id:\n",
+    "            if(n > 1):  # ignore header\n",
+    "                print(header.split(sep=\",\"))\n",
+    "                # print(csv)\n",
+    "                csvStringIO = StringIO(csv)\n",
+    "                df = pd.read_csv(csvStringIO, sep=\",\", header=None, names=header.split(sep=\",\"))\n",
+    "                # print(df)\n",
+    "                pos = df[['latitude','longitude']].to_numpy()\n",
+    "                anchors = [0, len(pos)-1]\n",
+    "                RDP.simplify(pos, .1, anchors)\n",
+    "                print (df.loc[anchors])\n",
+    "                break\n",
+    "            elif(n == 0):\n",
+    "                # add header without \"\\n\" at the end\n",
+    "                header = str(line[:-1])\n",
+    "            csv = \"\"\n",
+    "            n += 1\n",
+    "        csv += str(line)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "        oldId = id"
+   ]
   }
  ],
  "metadata": {
