--- a/msdata/prepareFIR.ipynb
+++ b/msdata/prepareFIR.ipynb
@@ -307,15 +307,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "xs: [-2.00375083e+07  1.11319491e+00  2.00375083e+07]\n",
-      "ys: [ 15538711.09630923  15538711.09630923 -15538711.09630923]\n"
+      "xs: [19926188.85199597]\n",
+      "ys: [9100250.90705955]\n"
      ]
     }
    ],
@@ -329,8 +329,8 @@
     "    y = 180.0/np.pi * np.log(np.tan(np.pi/4.0 + lats * (np.pi/180.0)/2.0)) * scale\n",
     "    return (x, y)\n",
     "\n",
-    "lats = np.asarray([80, 80, -80])\n",
-    "lons = np.asarray([-180, 0.00001, 180])\n",
+    "lats = np.asarray([63])\n",
+    "lons = np.asarray([179])\n",
     "\n",
     "# lats = df['latitude'].values\n",
     "# lons = df['longitude'].values\n",
@@ -350,17 +350,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[19926188.85199597, -2192993.968627489, -19469778.93974355]\n",
-      "[9145264.225481058, 9244653.031067532, 1572266.2547352884]\n",
-      "[inf, inf, inf]\n",
-      "[inf, inf, inf]\n"
+      "[19926188.85199597]\n",
+      "[9100250.907059548]\n",
+      "[63.0]\n",
+      "[179.0]\n"
      ]
     }
    ],
@@ -373,11 +373,8 @@
     "# isn2004=pyproj.CRS(\"+proj=lcc +lat_1=64.25 +lat_2=65.75 +lat_0=65 +lon_0=-19 +x_0=1700000 +y_0=300000 +no_defs +a=6378137 +rf=298.257222101 +to_meter=1\") \n",
     " \n",
     "\n",
-    "lon = [179, -19.7, -174.9] \n",
-    "lat = [63.183, 63.583, 13.983] \n",
-    "\n",
-    "# pyproj.transform(4326, 3387, lat, lon )\n",
-    "\n",
+    "lat = [63]   # x\n",
+    "lon = [179]  # y\n",
     "\n",
     "wgs2merc = Transformer.from_crs(\"epsg:4326\", \"epsg:3857\")\n",
     "x, y = wgs2merc.transform(lat, lon)\n",
@@ -386,7 +383,7 @@
     "print(y)\n",
     "\n",
     "merc2wgs = Transformer.from_crs(\"epsg:3857\", \"epsg:4326\")\n",
-    "lat, lon = wgs2merc.transform(y, x)\n",
+    "lat, lon = merc2wgs.transform(x, y)\n",
     "\n",
     "print(lat)\n",
     "print(lon)"
