--- a/msdata/prepareFIR.ipynb
+++ b/msdata/prepareFIR.ipynb
@@ -1576,63 +1576,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                               id          time      altitude   longitude  \\\n",
-      "date                                                                        \n",
-      "1977-11-10 15:08:00+00:00     NaN -31895.471095  39991.520295  179.852412   \n",
-      "1977-11-10 22:18:24+00:00  SIA37A  -6096.000000  39982.000000  115.882470   \n",
-      "1977-11-10 23:50:01+00:00  SIA37A   -599.000000  39981.000000  106.050930   \n",
-      "1977-11-10 23:54:34+00:00  SIA37A   -326.000000  29761.000000  105.568700   \n",
-      "1977-11-10 23:54:43+00:00  SIA37A   -317.000000  29436.000000  105.550440   \n",
-      "1977-11-10 23:56:04+00:00  SIA37A   -236.000000  26566.000000  105.381660   \n",
-      "1977-11-11 00:03:24+00:00  SIA37A    204.000000  13053.000000  104.573090   \n",
-      "1977-11-11 00:04:37+00:00  SIA37A    277.000000  11096.000000  104.452950   \n",
-      "1977-11-11 00:08:46+00:00  SIA37A    526.000000   5405.000000  104.111300   \n",
-      "1977-11-11 00:10:14+00:00  SIA37A    614.000000   3790.000000  104.012400   \n",
-      "1977-11-11 00:10:27+00:00  SIA37A    627.000000   3556.000000  103.999390   \n",
-      "1977-11-11 00:10:43+00:00  SIA37A    643.000000   3280.000000  103.991350   \n",
-      "1977-11-11 00:12:07+00:00  SIA37A    727.000000   1920.000000  103.990430   \n",
-      "1977-11-11 00:14:52+00:00  SIA37A    892.000000      4.000000  103.989170   \n",
+      "                                   time      altitude   longitude   latitude  \\\n",
+      "date                                                                           \n",
+      "1977-11-10 08:08:00+00:00 -57081.000000      0.000000 -118.407780  33.942500   \n",
+      "1977-11-10 08:09:00+00:00           NaN           NaN         NaN        NaN   \n",
+      "1977-11-10 08:10:00+00:00           NaN           NaN         NaN        NaN   \n",
+      "1977-11-10 08:11:00+00:00           NaN           NaN         NaN        NaN   \n",
+      "1977-11-10 08:12:00+00:00           NaN           NaN         NaN        NaN   \n",
+      "...                                 ...           ...         ...        ...   \n",
+      "1977-11-10 15:03:00+00:00           NaN           NaN         NaN        NaN   \n",
+      "1977-11-10 15:04:00+00:00           NaN           NaN         NaN        NaN   \n",
+      "1977-11-10 15:05:00+00:00           NaN           NaN         NaN        NaN   \n",
+      "1977-11-10 15:06:00+00:00           NaN           NaN         NaN        NaN   \n",
+      "1977-11-10 15:07:00+00:00 -31955.469865  39991.542435 -179.998821  23.319808   \n",
       "\n",
-      "                            latitude    latitude_m   longitude_m  \\\n",
-      "date                                                               \n",
-      "1977-11-10 15:08:00+00:00  23.286509           NaN           NaN   \n",
-      "1977-11-10 22:18:24+00:00   8.968160  1.289998e+07  1.002433e+06   \n",
-      "1977-11-10 23:50:01+00:00   1.564720  1.180554e+07  1.742055e+05   \n",
-      "1977-11-10 23:54:34+00:00   1.195480  1.175185e+07  1.330899e+05   \n",
-      "1977-11-10 23:54:43+00:00   1.189900  1.174982e+07  1.324686e+05   \n",
-      "1977-11-10 23:56:04+00:00   1.185770  1.173103e+07  1.320087e+05   \n",
-      "1977-11-11 00:03:24+00:00   1.166530  1.164102e+07  1.298665e+05   \n",
-      "1977-11-11 00:04:37+00:00   1.163830  1.162765e+07  1.295659e+05   \n",
-      "1977-11-11 00:08:46+00:00   1.138760  1.158962e+07  1.267745e+05   \n",
-      "1977-11-11 00:10:14+00:00   1.131550  1.157861e+07  1.259718e+05   \n",
-      "1977-11-11 00:10:27+00:00   1.135680  1.157716e+07  1.264316e+05   \n",
-      "1977-11-11 00:10:43+00:00   1.150270  1.157626e+07  1.280561e+05   \n",
-      "1977-11-11 00:12:07+00:00   1.235110  1.157616e+07  1.375025e+05   \n",
-      "1977-11-11 00:14:52+00:00   1.358780  1.157602e+07  1.512729e+05   \n",
+      "                             latitude_m   longitude_m         dist  \\\n",
+      "date                                                                 \n",
+      "1977-11-10 08:08:00+00:00 -1.318109e+07  4.021084e+06     0.000000   \n",
+      "1977-11-10 08:09:00+00:00           NaN           NaN          NaN   \n",
+      "1977-11-10 08:10:00+00:00           NaN           NaN          NaN   \n",
+      "1977-11-10 08:11:00+00:00           NaN           NaN          NaN   \n",
+      "1977-11-10 08:12:00+00:00           NaN           NaN          NaN   \n",
+      "...                                 ...           ...          ...   \n",
+      "1977-11-10 15:03:00+00:00           NaN           NaN          NaN   \n",
+      "1977-11-10 15:04:00+00:00           NaN           NaN          NaN   \n",
+      "1977-11-10 15:05:00+00:00           NaN           NaN          NaN   \n",
+      "1977-11-10 15:06:00+00:00           NaN           NaN          NaN   \n",
+      "1977-11-10 15:07:00+00:00           NaN           NaN  5702.821346   \n",
       "\n",
-      "                                   dist         dir       speed  \n",
-      "date                                                             \n",
-      "1977-11-10 15:08:00+00:00   5717.608936         NaN         NaN  \n",
-      "1977-11-10 22:18:24+00:00  12076.272577  233.442778  248.171482  \n",
-      "1977-11-10 23:50:01+00:00   1364.198635  232.556977  247.335986  \n",
-      "1977-11-10 23:54:34+00:00     67.522724  253.004303  235.854024  \n",
-      "1977-11-10 23:54:43+00:00      2.122686  268.599717  231.716861  \n",
-      "1977-11-10 23:56:04+00:00     18.769066  268.644933  204.353168  \n",
-      "1977-11-11 00:03:24+00:00     89.915394  268.713520  183.007809  \n",
-      "1977-11-11 00:04:37+00:00     13.359570  265.805804  152.948749  \n",
-      "1977-11-11 00:08:46+00:00     38.084238  265.830569  125.275117  \n",
-      "1977-11-11 00:10:14+00:00     11.024210  287.615306  116.732191  \n",
-      "1977-11-11 00:10:27+00:00      1.517518  331.147394  115.766778  \n",
-      "1977-11-11 00:10:43+00:00      1.852268  359.378856  112.313476  \n",
-      "1977-11-11 00:12:07+00:00      9.434332  359.416431   83.346606  \n",
-      "1977-11-11 00:14:52+00:00     13.752190    0.000000    0.000000  \n"
+      "                                  dir       speed  \n",
+      "date                                               \n",
+      "1977-11-10 08:08:00+00:00  299.619187  152.683148  \n",
+      "1977-11-10 08:09:00+00:00         NaN         NaN  \n",
+      "1977-11-10 08:10:00+00:00         NaN         NaN  \n",
+      "1977-11-10 08:11:00+00:00         NaN         NaN  \n",
+      "1977-11-10 08:12:00+00:00         NaN         NaN  \n",
+      "...                               ...         ...  \n",
+      "1977-11-10 15:03:00+00:00         NaN         NaN  \n",
+      "1977-11-10 15:04:00+00:00         NaN         NaN  \n",
+      "1977-11-10 15:05:00+00:00         NaN         NaN  \n",
+      "1977-11-10 15:06:00+00:00         NaN         NaN  \n",
+      "1977-11-10 15:07:00+00:00         NaN         NaN  \n",
+      "\n",
+      "[420 rows x 9 columns]\n"
      ]
     },
     {
@@ -2081,7 +2074,7 @@
        "1977-11-11 00:14:52+00:00     13.752190    0.000000    0.000000  "
       ]
      },
-     "execution_count": 91,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2127,9 +2120,12 @@
     "    \n",
     "    # cut the dataset in east and west\n",
     "    east  = dr.loc[ : dr['longitude'].diff().idxmax()][:-1]\n",
+    "    east = dr_.interpolate('linear')\n",
     "    west  = dr.loc[dr['longitude'].diff().idxmax() : ]\n",
     "\n",
-    "    print(west)\n",
+    "    east = east.resample('60s').mean()\n",
+    "    west = west.resample('60s').mean()\n",
+    "    print(east)\n",
     "\n",
     "    # print(dr_.loc[dr_['longitude'].idxmin()])\n",
     "    # print(dr_.loc[dr_['longitude'].idxmax()])\n",
