--- a/skdata/test.ipynb
+++ b/skdata/test.ipynb
@@ -30,6 +30,173 @@
     "print(micha)\n",
     "df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "2+5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unexpected character after line continuation character (670381690.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Input \u001b[1;32mIn [2]\u001b[1;36m\u001b[0m\n\u001b[1;33m    print (8\\2)\u001b[0m\n\u001b[1;37m             ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m unexpected character after line continuation character\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (8\\2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=8/2\n",
+    "print (a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current Letter :\n",
+      "Current Letter :\n",
+      "Current Letter :\n",
+      "Current Letter :\n",
+      "Current Letter :\n",
+      "Current Letter :\n"
+     ]
+    }
+   ],
+   "source": [
+    "for letter in \"Python\":     # First Example\n",
+    "   print ('Current Letter :'), letter"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current fruit :\n",
+      "Current fruit :\n",
+      "Current fruit :\n"
+     ]
+    }
+   ],
+   "source": [
+    "fruits = ['banana', 'apple',  'mango']\n",
+    "for fruit in fruits:        # Second Example\n",
+    "   print ('Current fruit :'), fruit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'type' object is not subscriptable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\Khaki\\Documents\\GitHub\\bluesky\\plugins\\skdata\\test.ipynb Cell 9\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Khaki/Documents/GitHub/bluesky/plugins/skdata/test.ipynb#X11sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mrange\u001b[39;49m[\u001b[39m10\u001b[39;49m]\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'type' object is not subscriptable"
+     ]
+    }
+   ],
+   "source": [
+    "range[10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current Letter : P\n",
+      "Current Letter : y\n",
+      "Current Letter : t\n",
+      "Current Letter : h\n",
+      "Current Letter : o\n",
+      "Current Letter : n\n"
+     ]
+    }
+   ],
+   "source": [
+    "for letter in 'Python':     # First Example\n",
+    "   print ('Current Letter :', letter)\n",
+    "   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hola\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (\"Hola\")"
+   ]
   }
  ],
  "metadata": {
