--- a/skdata/test.ipynb
+++ b/skdata/test.ipynb
@@ -1,5 +1,57 @@
 {
- "cells": [],
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Read the trajectories from the file \"trajectories.txt\":\n",
+    "with open('trajectories.txt') as trajectories:\n",
+    "    traj = trajectories.readlines()\n",
+    "\n",
+    "# Separate and put the longitude and latitude and altitude and the velocities in the corresponding variables:\n",
+    "# long = traj...\n",
+    "# lat = traj...\n",
+    "# alt = traj...\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Read the velocities from the file \"readme.txt\":\n",
+    "with open('readme.txt') as traj:\n",
+    "    lines = traj.readlines()\n",
+    "\n",
+    "# Separate and put the longitude and latitude and altitude and the velocities in the corresponding variables:\n",
+    "# long = traj...\n",
+    "# lat = traj...\n",
+    "# alt = traj..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 8 b\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (traj[1])"
+   ]
+  }
+ ],
  "metadata": {
   "kernelspec": {
    "display_name": "Python 3.9.12 ('seyed')",
