--- a/skdata/test.ipynb
+++ b/skdata/test.ipynb
@@ -2,19 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Read the trajectories from the file \"trajectories.txt\":\n",
-    "with open('trajectories.txt') as trajectories:\n",
-    "    traj = trajectories.readlines()\n",
-    "\n",
-    "# Separate and put the longitude and latitude and altitude and the velocities in the corresponding variables:\n",
-    "# long = traj...\n",
-    "# lat = traj...\n",
-    "# alt = traj...\n",
-    "\n"
+    "# Reading data from data file\n",
+    "import panda as pd\n",
+    "data_as = pd.read_csv(\"data_airspace.csv\")\n"
    ]
   },
   {
@@ -23,32 +17,68 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Read the velocities from the file \"readme.txt\":\n",
-    "with open('readme.txt') as traj:\n",
-    "    lines = traj.readlines()\n",
+    "# Extracting trajectory data from columns of the data file to corresponding variables\n",
     "\n",
-    "# Separate and put the longitude and latitude and altitude and the velocities in the corresponding variables:\n",
-    "# long = traj...\n",
-    "# lat = traj...\n",
-    "# alt = traj..."
+    "long_1 = data_as.loc[:,\"longitude_1\"]\n",
+    "lat_1 = data_as.loc[:,\"latitude_1\"]\n",
+    "alt_1 = data_as.loc[:,\"altitude_1\"]\n",
+    "\n",
+    "long_2 = data_as.loc[:,\"longitude_2\"]\n",
+    "lat_2 = data_as.loc[:,\"latitude_2\"]\n",
+    "alt_2 = data_as.loc[:,\"altitude_2\"]\n",
+    "\n",
+    "u_1 = data_as.loc[:,\"velocity_u_1\"]\n",
+    "v_1 = data_as.loc[:,\"velocity_v_1\"]\n",
+    "w_1 = data_as.loc[:,\"velocity_w_1\"]\n",
+    "\n",
+    "u_2 = data_as.loc[:,\"velocity_u_2\"]\n",
+    "v_2 = data_as.loc[:,\"velocity_v_2\"]\n",
+    "w_2 = data_as.loc[:,\"velocity_w_2\"]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4 8 b\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print (traj[1])"
+    "# Extracting sector data from columns of the data file to corresponding variables\n",
+    "\n",
+    "x = data_as.loc[:,\"coordinates_x\"]\n",
+    "y = data_as.loc[:,\"coordinates_y\"]\n",
+    "z = data_as.loc[:,\"floor_to_ceiling_height\"]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# 1_Number of A/C\n",
+    "# should enumerate number of columns / 6\n",
+    "No_A/C = data_as.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1_average_transit_time\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "tt_1 = np.array(long_1) \n",
+    "ave_tt_1 = tt_1.size\n",
+    "print(ave_tt_1)\n",
+    "\n",
+    "tt_2 = np.array(long_2) \n",
+    "ave_tt_1 = tt_2.size\n",
+    "print(ave_tt_2)"
    ]
   }
  ],
