--- a/skdata/test.ipynb
+++ b/skdata/test.ipynb
@@ -44,9 +44,9 @@
    "source": [
     "# Extracting sector data from columns of the data file to corresponding variables\n",
     "\n",
-    "x = data_as.loc[:,\"coordinates_x\"]\n",
-    "y = data_as.loc[:,\"coordinates_y\"]\n",
-    "z = data_as.loc[:,\"floor_to_ceiling_height\"]\n"
+    "x_sector = data_as.loc[:,\"coordinates_x\"]\n",
+    "y_sector = data_as.loc[:,\"coordinates_y\"]\n",
+    "z_sector = data_as.loc[:,\"floor_to_ceiling_height\"]\n"
    ]
   },
   {
@@ -58,7 +58,7 @@
     "import numpy as np\n",
     "\n",
     "# 1_Number of A/C\n",
-    "# should enumerate number of columns / 6\n",
+    "# we should enumerate number of columns / 6\n",
     "No_A/C = data_as.columns"
    ]
   },
@@ -68,17 +68,166 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 1_average_transit_time\n",
+    "# 3_Area and volume of the sector\n",
+    "#  Shoelace formula because it is faster\n",
+    "def PolyArea(x,y):\n",
+    "    return 0.5*np.abs(np.dot(x,np.roll(y,1))-np.dot(y,np.roll(x,1)))\n",
     "\n",
-    "import numpy as np\n",
+    "area = PolyArea(x_sector,y_sector)\n",
+    "volume = area*z_sector"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 4_A/C density: #A/C / Area of the sector\n",
     "\n",
-    "tt_1 = np.array(long_1) \n",
-    "ave_tt_1 = tt_1.size\n",
-    "print(ave_tt_1)\n",
+    "density = No_A/C/volume\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 5_ number of A/C with Heading Change greater than 15º\n",
+    "# Achtung: zero in the denominator of slope[i]\n",
+    "from math import pi\n",
     "\n",
-    "tt_2 = np.array(long_2) \n",
-    "ave_tt_1 = tt_2.size\n",
-    "print(ave_tt_2)"
+    "def Heading_change(long,lat)\n",
+    "    for i in range(1,(len(long)-1))\n",
+    "        delta_long[i]=long[i+1]-long[i];\n",
+    "        delta_lat[i]=lat[i+1]-lat[i];\n",
+    "        slope[i]=delta_lat[i]/delta_long[i];\n",
+    "        arctan[i]=np.arctan( slope[i] )*180/pi;\n",
+    "        logical_atan[i]=arctan[i]>15;\n",
+    "\n",
+    "    if sum(logical_atan)>0\n",
+    "        return 1\n",
+    "    else\n",
+    "        return 0\n",
+    "\n",
+    "count = Heading_change(long_1,lat_1) + Heading_change(long_2,lat_2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 6_ number of A/C with Altitude Change greater than 750 feet\n",
+    "\n",
+    "for j=1:2\n",
+    "     for i=1:a-1\n",
+    "delta_alt(j,i)=alt(j,i+1)-alt(j,i);\n",
+    "logical_delta_alt(j,i)=delta_alt(j,i)>750;\n",
+    "     end\n",
+    "end\n",
+    "\n",
+    "counter=0;\n",
+    "for j=1:2\n",
+    "    if sum(logical_delta_alt(j,:))>0\n",
+    "        counter=counter+1;\n",
+    "    end \n",
+    "end\n",
+    "disp (\"#A/C with Altitude Change greater than 750 feet:\")\n",
+    "disp (counter)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 7_ number of A/C with 3-D Euclidean distance between 0-5 nautical miles\n",
+    "\n",
+    "for i=1:a\n",
+    "diff_long(i)=long(1,i)-long(2,i);\n",
+    "diff_lat(i)=lat(1,i)-lat(2,i);\n",
+    "diff_alt(i)=lat(1,i)-lat(2,i);\n",
+    "dist(i)=(diff_lat(i)^2 + diff_long(i)^2 + diff_alt(i)^2)^0.5;\n",
+    "logical_dist(i)=dist(i)<5;\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Task load number 1: average_transit_time\n",
+    "\n",
+    "def average_tt(long)\n",
+    "    return len(long)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "w=b>1\n",
+    "w+w*3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum(a)"
    ]
   }
  ],
