--- a/skdata/test.ipynb
+++ b/skdata/test.ipynb
@@ -98,20 +98,20 @@
     "# Achtung: zero in the denominator of slope[i]\n",
     "from math import pi\n",
     "\n",
-    "def Heading_change(long,lat)\n",
-    "    for i in range(1,(len(long)-1))\n",
-    "        delta_long[i]=long[i+1]-long[i];\n",
-    "        delta_lat[i]=lat[i+1]-lat[i];\n",
-    "        slope[i]=delta_lat[i]/delta_long[i];\n",
-    "        arctan[i]=np.arctan( slope[i] )*180/pi;\n",
-    "        logical_atan[i]=arctan[i]>15;\n",
+    "def Heading_change(long,lat):\n",
+    "    for i in range(1,(len(long)-1)):\n",
+    "        delta_long[i]=long[i+1]-long[i]\n",
+    "        delta_lat[i]=lat[i+1]-lat[i]\n",
+    "        slope[i]=delta_lat[i]/delta_long[i]\n",
+    "        arctan[i]=np.arctan( slope[i] )*180/pi\n",
+    "        logical_atan[i]=arctan[i]>15\n",
     "\n",
-    "    if sum(logical_atan)>0\n",
+    "    if '1' in logical_atan\n",
     "        return 1\n",
-    "    else\n",
+    "    else:\n",
     "        return 0\n",
     "\n",
-    "count = Heading_change(long_1,lat_1) + Heading_change(long_2,lat_2)\n"
+    "count_Headin_Change = Heading_change(long_1,lat_1) + Heading_change(long_2,lat_2)\n"
    ]
   },
   {
@@ -120,23 +120,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 6_ number of A/C with Altitude Change greater than 750 feet\n",
+    "# 6_ number of A/C with Altitude Change greater than 750 feet (i.e., 228.6 meter)\n",
     "\n",
-    "for j=1:2\n",
-    "     for i=1:a-1\n",
-    "delta_alt(j,i)=alt(j,i+1)-alt(j,i);\n",
-    "logical_delta_alt(j,i)=delta_alt(j,i)>750;\n",
-    "     end\n",
-    "end\n",
+    "def Altitude_Change(alt):\n",
+    "    delta_alt[i]=alt[i+1]-alt[i]\n",
+    "    logical_delta_alt[i]=delta_alt[i]>228.6\n",
+    "    if '1' in logical_delta_alt:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return 0\n",
     "\n",
-    "counter=0;\n",
-    "for j=1:2\n",
-    "    if sum(logical_delta_alt(j,:))>0\n",
-    "        counter=counter+1;\n",
-    "    end \n",
-    "end\n",
-    "disp (\"#A/C with Altitude Change greater than 750 feet:\")\n",
-    "disp (counter)"
+    "count_Altitude_Change =  Altitude_Change(alt_1) + Altitude_Change(alt_2)"
    ]
   },
   {
@@ -145,15 +139,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 7_ number of A/C with 3-D Euclidean distance between 0-5 nautical miles\n",
+    "# 7_ number of A/C with 3D Euclidean distance between 0-5 nautical miles (i.e., 0-9260 meters)\n",
     "\n",
-    "for i=1:a\n",
-    "diff_long(i)=long(1,i)-long(2,i);\n",
+    "def distance(long1,lat1,alt1, long2,lat2,alt2):\n",
+    "\n",
+    "\n",
+    "diff_long = long1(1,i)-long2\n",
     "diff_lat(i)=lat(1,i)-lat(2,i);\n",
     "diff_alt(i)=lat(1,i)-lat(2,i);\n",
     "dist(i)=(diff_lat(i)^2 + diff_long(i)^2 + diff_alt(i)^2)^0.5;\n",
     "logical_dist(i)=dist(i)<5;\n",
-    "end"
+    "end\n",
+    "\n",
+    "counter=0;\n",
+    "    if sum(logical_dist)>0\n",
+    "        counter=counter+1;\n",
+    "    end \n",
+    "disp (\"#A/C with 3-D Euclidean distance between 0-5 nautical miles:\")\n",
+    "disp (counter)\n",
+    "disp (\"pair\")\n"
    ]
   },
   {
@@ -212,22 +216,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "6"
+       "[1, 2, 3, 5, 6, 7, 8, 9]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sum(a)"
+    "q=[5,6,7,8,9]\n",
+    "\n",
+    "q+a\n",
+    "a+q"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "hello"
    ]
   }
  ],
