--- a/skdata/test.ipynb
+++ b/skdata/test.ipynb
@@ -8,7 +8,10 @@
    "source": [
     "# Reading data from data file\n",
     "import panda as pd\n",
-    "data_as = pd.read_csv(\"data_airspace.csv\")\n"
+    "data_as = pd.read_csv(\"data_airspace.csv\")\n",
+    "\n",
+    "from cmath import nan\n",
+    "import numpy as np"
    ]
   },
   {
@@ -58,7 +61,7 @@
     "import numpy as np\n",
     "\n",
     "# 1_Number of A/C\n",
-    "# we should enumerate number of columns / 6\n",
+    "# we should enumerate number of columns and then divide it by 6\n",
     "No_A/C = data_as.columns"
    ]
   },
@@ -74,7 +77,7 @@
     "    return 0.5*np.abs(np.dot(x,np.roll(y,1))-np.dot(y,np.roll(x,1)))\n",
     "\n",
     "area = PolyArea(x_sector,y_sector)\n",
-    "volume = area*z_sector"
+    "volume = area * z_sector"
    ]
   },
   {
@@ -99,7 +102,7 @@
     "from math import pi\n",
     "\n",
     "def Heading_change(long,lat):\n",
-    "    for i in range(1,(len(long)-1)):\n",
+    "    for i in range(len(long)-1):\n",
     "        delta_long[i]=long[i+1]-long[i]\n",
     "        delta_lat[i]=lat[i+1]-lat[i]\n",
     "        slope[i]=delta_lat[i]/delta_long[i]\n",
@@ -143,22 +146,30 @@
     "\n",
     "def distance(long1,lat1,alt1, long2,lat2,alt2):\n",
     "\n",
+    "    for i in range(len(long)-1):\n",
     "\n",
-    "diff_long = long1(1,i)-long2\n",
-    "diff_lat(i)=lat(1,i)-lat(2,i);\n",
-    "diff_alt(i)=lat(1,i)-lat(2,i);\n",
-    "dist(i)=(diff_lat(i)^2 + diff_long(i)^2 + diff_alt(i)^2)^0.5;\n",
-    "logical_dist(i)=dist(i)<5;\n",
-    "end\n",
+    "        diff_long[i] = long1[i]-long2[i]\n",
+    "        diff_lat[i] = lat1[i]-lat2[i]\n",
+    "        diff_alt[i] = alt1[i]-alt2[i]\n",
     "\n",
-    "counter=0;\n",
-    "    if sum(logical_dist)>0\n",
-    "        counter=counter+1;\n",
-    "    end \n",
-    "disp (\"#A/C with 3-D Euclidean distance between 0-5 nautical miles:\")\n",
-    "disp (counter)\n",
-    "disp (\"pair\")\n"
+    "        dist[i]=(diff_long[i]^2 + diff_lat[i]^2 + diff_alt[i]^2)^0.5\n",
+    "        logical_dist[i]=dist[i]<9260\n",
+    "\n",
+    "    if '1' in logical_dist:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return 0\n",
+    "\n",
+    "\n",
+    "count_distance_5nm = distance (long_1,lat_1,alt_1, long_2,lat_2,alt_2)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -168,80 +179,32 @@
    "source": [
     "# Task load number 1: average_transit_time\n",
     "\n",
-    "def average_tt(long)\n",
-    "    return len(long)\n",
+    "def ave_tt(long):\n",
+    "    ave_transit_time=len(long)\n",
+    "    return ave_transit_time\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "len(c)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "w=b>1\n",
-    "w+w*3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 2, 3, 5, 6, 7, 8, 9]"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "q=[5,6,7,8,9]\n",
     "\n",
-    "q+a\n",
-    "a+q"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "hello"
+    "# 2_Total controller's workload\n",
+    "tau_b=2\n",
+    "lambda_b=0.05\n",
+    "tau_t=10\n",
+    "tau_r=3\n",
+    "tau_c=50\n",
+    "P=300\n",
+    "M_h=7\n",
+    "M_v=1.64579\n",
+    "E_v12=440*0.000277778\n",
+    "\n",
+    "G= tau_b*lambda_b + tau_t*density*volume/ave_tt + tau_r*density*volume/P + tau_c*2*M_h*M_v*E_v12*density*(density*volume+1)\n",
+    "\n"
    ]
   }
  ],
